--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,13 +13,4 @@ services:
       PROJECT_PATH: "./"
     working_dir: /project  # Sets the working directory for the container
 
-    command: >
-      bash -c "
-      # Setup Godot export templates
-      mkdir -v -p ~/.local/share/godot/export_templates/ &&
-      mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable &&
-
-      # Build for Linux
-      mkdir -v -p build/linux &&
-      godot --headless
-      "
+    command: godot --headless
