--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,4 +15,4 @@ services:
 
     # Command to execute git clone and then start godot
     command: >
-      sh -c "git clone https://github.com/lanmower/io.git && cd io && godot --headless --verbose --export-release 'Linux/X11' ./start.arm64 && chmod +x start.arm64 && ./start.arm64"
+      sh -c "git clone https://github.com/lanmower/io.git && cd io && godot --headless --export-release 'Linux/X11' ./start.arm64 && chmod +x start.arm64 && ./start.arm64"
