--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,12 @@ services:
 
     # Command to check if 'io' exists, delete if it does, clone, and then export
     command: >
-             git clone https://github.com/lanmower/io.git;
-             cd io &&
-             godot --headless --export-release 'Linux/X11' ./export/start.arm64 &&
-             cd export &&
-             chmod +x start.arm64 &&
-             ./start.arm64"
+      if [ -d "io" ]; then 
+        rm -rf io; 
+      fi; 
+      git clone https://github.com/lanmower/io.git; 
+      cd io && 
+      godot --headless --export-release 'Linux/X11' ./export/start.arm64 && 
+      cd export && 
+      chmod +x start.arm64 && 
+      ./start.arm64
