--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,25 +2,25 @@ version: '3.8'
 
 services:
   godot-ci:
-    image: barichello/godot-ci:4.3   # Use the specified Godot version
+    image: barichello/godot-ci:4.3
     container_name: godot-ci
     restart: unless-stopped
     volumes:
-      - ./exported:/exported            # Directory to store exported files
+      - ./exported:/exported
     environment:
       GODOT_VERSION: "4.3"
       EXPORT_NAME: "io"
       PROJECT_PATH: "./"
-    working_dir: /project               # Sets the working directory for the container
+    working_dir: /project
+    platform: linux/amd64  # Specify the platform
 
-    # Command to check if 'io' exists, delete if it does, clone, and then export
-    entrypoint: /bin/sh
-    command: -c "if [ -d 'io' ]; then 
-      rm -rf io; 
-    fi; 
-    git clone https://github.com/lanmower/io.git; 
-    cd io && 
-    godot --headless --export-release 'Linux/X11' ./export/start.arm64 && 
-    cd export && 
-    chmod +x start.arm64 && 
-    ./start.arm64"
+    command: >
+      sh -c "if [ -d 'io' ]; then 
+        rm -rf io; 
+      fi; 
+      git clone https://github.com/lanmower/io.git; 
+      cd io && 
+      godot --headless --export-release 'Linux/X11' ./export/start.arm64 && 
+      cd export && 
+      chmod +x start.arm64 && 
+      ./start.arm64"
