--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -68,3 +68,35 @@ jobs:
           branch: gh-pages # The branch the action should deploy to.
           folder: build/web # The folder the action should deploy.
 
+  export-arm64:
+    name: ARM64 Export
+    runs-on: ubuntu-20.04
+    container:
+      image: barichello/godot-ci:4.3
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          lfs: true
+      - name: Setup
+        run: |
+          mkdir -v -p ~/.local/share/godot/export_templates/
+          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+      - name: ARM64 Build
+        run: |
+          mkdir -v -p build/arm64
+          EXPORT_DIR="$(readlink -f build)"
+          cd $PROJECT_PATH
+          godot --headless --verbose --export-release "Linux/ARM64" "$EXPORT_DIR/arm64/$EXPORT_NAME.arm64"
+      - name: Create Release Asset
+        id: create_release
+        run: |
+          echo "Creating asset..."
+          echo "::set-output name=asset_path::$(readlink -f build/arm64/$EXPORT_NAME.arm64)"
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ${{ steps.create_release.outputs.asset_path }}
+          asset_name: "$EXPORT_NAME.arm64"
+          asset_content_type: "application/octet-stream"
