--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -38,7 +38,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 [preset.1]
 
-name="Linux/X11"
+name="Linux/ARM64"
 platform="Linux/X11"
 runnable=true
 dedicated_server=false
