--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -60,7 +60,10 @@ jobs:
           mkdir -p build/arm64
           EXPORT_DIR="$(readlink -f build)"
           cd $PROJECT_PATH
-          godot --headless --verbose --export-release "Linux/ARM64" "$EXPORT_DIR/arm64/$EXPORT_NAME.arm64"
+          godot --headless --verbose --export-release "Linux/ARM64" "$EXPORT_DIR/arm64/${{ env.EXPORT_NAME }}.arm64"
+
+      - name: List Output Files for Debugging
+        run: ls -la build/arm64 # List contents of the build/arm64 directory
 
       - name: Create a Short SHA Tag
         id: create_tag
@@ -94,6 +97,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/arm64/$EXPORT_NAME.arm64 # Ensure this path is correct
-          asset_name: "$EXPORT_NAME.arm64"
+          asset_path: build/arm64/${{ env.EXPORT_NAME }}.arm64 # Use correct syntax for the environment variable
+          asset_name: "${{ env.EXPORT_NAME }}.arm64"
           asset_content_type: "application/octet-stream"
