--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -74,26 +74,26 @@ jobs:
         run: |
           if git tag -l | grep -q "${{ env.short_sha }}"; then
             echo "Release already exists"
-            echo "::set-output name=release_exists::true"
+            echo "release_exists=true" >> $GITHUB_ENV
           else
             echo "Release does not exist"
-            echo "::set-output name=release_exists::false"
+            echo "release_exists=false" >> $GITHUB_ENV
           fi
 
       - name: Create Release
         id: create_release
-        if: steps.check_release.outputs.release_exists == 'false' # Only create if it does not exist
+        if: env.release_exists == 'false' # Only create if it does not exist
         uses: actions/create-release@v1
         with:
           tag_name: "release-${{ env.short_sha }}" # Short SHA-based tag
-          release_name: "Release ${{ env.short_sha }}" # Custom release name with short SHA
+          release_name: "Release ${{ env.short_sha }}" # Custom release name
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Ensure the correct usage of GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Release Asset
-        if: steps.create_release.outputs.upload_url != '' # Proceed to upload only if a release is created
+        if: steps.create_release.outputs.upload_url != '' # Proceed only if a release was created
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
