--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,9 @@ services:
     working_dir: /project
     platform: linux/arm64  # Specify the platform
 
+    ports:
+      - "443:443"  # Maps port 443 on the host to port 443 on the container
+
     command: >
       sh -c "if [ -d 'io' ]; then 
         rm -rf io; 
