--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,4 +22,7 @@ services:
       fi; 
       git clone https://github.com/lanmower/io.git; 
       cd io && 
-      godot --headless"
+      mkdir -p build
+      godot --headless --verbose --export-release "Linux/ARM64" "build/io.arm64
+      cd build
+      ./io.arm64"
