--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,12 +17,5 @@ services:
     platform: linux/arm64
 
     command: >
-      sh -c "if [ -d 'io' ]; then 
-        rm -rf io; 
-      fi; 
-      git clone https://github.com/lanmower/io.git &&
-      cd io && 
-      mkdir -p build &&
-      godot --headless --verbose --export-release "Linux/ARM64" "build/io.arm64 &&
-      cd build &&
+      sh -c "cd build &&
       ./io.arm64"
