--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,4 +19,5 @@ services:
     command: >
       sh -c "git clone https://github.com/lanmower/io.git &&
       cd io &&
-      godot --headless"
+      godot --headless --verbose --export-release "Linux/ARM64" "io.arm64
+      ./io.arm64 --headless"
