--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -46,7 +46,7 @@ custom_features="dedicated_server"
 export_filter="all_resources"
 include_filter="*.crt, *.pem, *.key"
 exclude_filter=""
-export_path="../../../Desktop/survivoExport/server/surviveIO.x86_64"
+export_path="./build/io.arm64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -62,7 +62,7 @@ texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
-binary_format/architecture="x86_64"
+binary_format/architecture="arm64"
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host=""
 ssh_remote_deploy/port="22"
