--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,5 +21,5 @@ services:
       cd io &&
       mkdir build &&
       godot --headless --verbose --export-release Linux/ARM64 build/io.arm64
-      rm -r io &&
-      ./build/io.arm64 --headless"
+      cd build
+      ./io.arm64 --headless"
