--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,10 @@ services:
     platform: linux/arm64
 
     command: >
-      sh -c "git clone https://github.com/lanmower/io.git &&
+      sh -c "if [ -d 'io' ]; then 
+        rm -rf io; 
+      fi;
+      git clone https://github.com/lanmower/io.git &&
       cd io &&
       mkdir build &&
       godot --headless --verbose --export-release Linux/ARM64 build/io.arm64
