--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,4 @@ services:
     working_dir: /project
     platform: linux/arm64
 
-    command: >
-      cd io &&
-      mkdir build &&
-      godot --headless --verbose"
+    command: godot --headless --verbose
