--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,5 +16,4 @@ services:
 
     command: >
       godot --headless --export-release Linux/ARM64 export/io.arm64 &&
-      cd export
-      ./io.arm64
+      pause
