--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,4 +15,6 @@ services:
     platform: linux/arm64
 
     command: >
-      godot --headless
+      sh -c "godot --headless --export-release Linux/ARM64 export/io.arm64 &&
+      cd export &&
+      ./io.arm64"
